RESOLVED FIXED270246
[WGSL] shader,validation,extension,pointer_composite_access:* is failing
https://bugs.webkit.org/show_bug.cgi?id=270246
Summary [WGSL] shader,validation,extension,pointer_composite_access:* is failing
Tadeu Zagallo
Reported 2024-02-28 13:34:42 PST
...
Attachments
Radar WebKit Bug Importer
Comment 1 2024-02-28 13:35:01 PST
Tadeu Zagallo
Comment 2 2024-02-28 13:40:03 PST
EWS
Comment 3 2024-02-29 05:15:43 PST
Committed 275490@main (978f3f4a4a75): <https://commits.webkit.org/275490@main> Reviewed commits have been landed. Closing PR #25250 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.