[WGSL] shader,validation,extension,pointer_composite_access:* is failing https://bugs.webkit.org/show_bug.cgi?id=270246 rdar://123784316

Reviewed by Mike Wyrzykowski.

The original support for pointer composite access was implemented in 275383@main,
but the case where the type is a pointer wasn't handled in two places.

* LayoutTests/http/tests/webgpu/webgpu/shader/validation/extension/pointer_composite_access-expected.txt: Added.
* Source/WebGPU/WGSL/BoundsCheck.cpp:
(WGSL::BoundsCheckVisitor::visit):
* Source/WebGPU/WGSL/TypeCheck.cpp:
(WGSL::TypeChecker::visit):

Canonical link: https://commits.webkit.org/275490@main